# lijusi

./: .gitignore  CMakeLists.txt  Lijusi.cpp  Lijusi.h  Lijusi.kdev4  Lijusi.pro  Makefile  README.md  lumeme_generic.cpp  lumeme_generic.h  main.cpp
